Adicionado Placeholders e Required aos Campos do Formulário

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Formulário de Cadastro</h1>
         <form>
             <label class="form-label" for="nome">Digite seu nome:</label>
-            <input class="form-control" name="nome" type="text">
+            <input class="form-control" name="nome" type="text" placeholder="Seu Nome Completo" required>
             <label class="form-label" for="email">Digite seu email:</label>
-            <input class="form-control" name="email" type="email">
+            <input class="form-control" name="email" type="email" placeholder="Ex: seuEmail@gmail.com" required>
             <label class="form-label" for="tel">Digite seu número de telefone:</label>
-            <input class="form-control" name="tel" type="number">
+            <input class="form-control" name="tel" type="number" placeholder="Ex: (000) 12345-6789" required>
             <button type="submit" class="btn btn-success">Enviar</button>
         </form>
     </div>
